--- a/archives/toutiao-search/2023-10-12.md
+++ b/archives/toutiao-search/2023-10-12.md
@@ -1,52 +1,74 @@
 # 2023-10-12
 
-共 236 条
+共 256 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 12 2023 16:01:07 GMT+0800 (China Standard Time) -->
-1. [3名中国公民在巴以冲突中遇难](https://so.toutiao.com/search?keyword=3名中国公民在巴以冲突中遇难)
-1. [歌手黄安晒华为新机：飞机上信号满格](https://so.toutiao.com/search?keyword=歌手黄安晒华为新机：飞机上信号满格)
-1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
-1. [宝马车高速变道后紧急刹车降速至40](https://so.toutiao.com/search?keyword=宝马车高速变道后紧急刹车降速至40)
+<!-- 最后更新时间 Thu Oct 12 2023 17:00:53 GMT+0800 (China Standard Time) -->
+1. [《大宅门》导演郭宝昌去世](https://so.toutiao.com/search?keyword=《大宅门》导演郭宝昌去世)
+1. [普京被国际法院发逮捕令后首出国门](https://so.toutiao.com/search?keyword=普京被国际法院发逮捕令后首出国门)
+1. [杭州进入亚残运会周期	](https://so.toutiao.com/search?keyword=杭州进入亚残运会周期	)
+1. [人民日报评女童走失：安全警钟长鸣](https://so.toutiao.com/search?keyword=人民日报评女童走失：安全警钟长鸣)
 1. [东部战区回应美军机过航台湾海峡](https://so.toutiao.com/search?keyword=东部战区回应美军机过航台湾海峡)
 1. [巴以新一轮冲突已致超2500人死亡](https://so.toutiao.com/search?keyword=巴以新一轮冲突已致超2500人死亡)
-1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
-1. [司机绕路带女乘客至陌生地段被约谈](https://so.toutiao.com/search?keyword=司机绕路带女乘客至陌生地段被约谈)
-1. [学校辟谣"霸凌女生亮相学校宣传片"](https://so.toutiao.com/search?keyword=学校辟谣"霸凌女生亮相学校宣传片")
-1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
-1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [歌手黄安晒华为新机：飞机上信号满格](https://so.toutiao.com/search?keyword=歌手黄安晒华为新机：飞机上信号满格)
+1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
+1. [警方辟谣广州地铁遭恐怖袭击](https://so.toutiao.com/search?keyword=警方辟谣广州地铁遭恐怖袭击)
+1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
+1. [新华社战地记者直击巴以新一轮冲突](https://so.toutiao.com/search?keyword=新华社战地记者直击巴以新一轮冲突)
 1. [实拍以色列对加沙狂轰滥炸](https://so.toutiao.com/search?keyword=实拍以色列对加沙狂轰滥炸)
-1. [韩国关注巴以冲突：朝鲜强过哈马斯](https://so.toutiao.com/search?keyword=韩国关注巴以冲突：朝鲜强过哈马斯)
-1. [直击巴以冲突现场：爆炸声不断](https://so.toutiao.com/search?keyword=直击巴以冲突现场：爆炸声不断)
 1. [埃尔多安：以色列的反应相当于屠杀](https://so.toutiao.com/search?keyword=埃尔多安：以色列的反应相当于屠杀)
+1. [记者亲历巴以冲突现场](https://so.toutiao.com/search?keyword=记者亲历巴以冲突现场)
+1. [韩国关注巴以冲突：朝鲜强过哈马斯](https://so.toutiao.com/search?keyword=韩国关注巴以冲突：朝鲜强过哈马斯)
 1. [外媒：以色列或将面临五线作战](https://so.toutiao.com/search?keyword=外媒：以色列或将面临五线作战)
 1. [白宫：拜登没看到哈马斯斩首以儿童](https://so.toutiao.com/search?keyword=白宫：拜登没看到哈马斯斩首以儿童)
-1. [新华社战地记者直击巴以新一轮冲突](https://so.toutiao.com/search?keyword=新华社战地记者直击巴以新一轮冲突)
 1. [泽连斯基呼吁各国领导人访问以色列](https://so.toutiao.com/search?keyword=泽连斯基呼吁各国领导人访问以色列)
-1. [普京被国际法院发逮捕令后首出国门](https://so.toutiao.com/search?keyword=普京被国际法院发逮捕令后首出国门)
+1. [外媒：华为发布手机的方式值得赞扬](https://so.toutiao.com/search?keyword=外媒：华为发布手机的方式值得赞扬)
+1. [租客怀孕5个月房东要求退租](https://so.toutiao.com/search?keyword=租客怀孕5个月房东要求退租)
 1. [大衣哥被白发老人拎着行李箱堵家门](https://so.toutiao.com/search?keyword=大衣哥被白发老人拎着行李箱堵家门)
+1. [农民断缴380元新农合？专家：别涨了](https://so.toutiao.com/search?keyword=农民断缴380元新农合？专家：别涨了)
+1. [刘暖曦直播4次后被投诉永久禁播](https://so.toutiao.com/search?keyword=刘暖曦直播4次后被投诉永久禁播)
+1. [小米社区误封雷军本人账号](https://so.toutiao.com/search?keyword=小米社区误封雷军本人账号)
+1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
+1. [外媒：外国雇佣兵正离乌赴以作战](https://so.toutiao.com/search?keyword=外媒：外国雇佣兵正离乌赴以作战)
+1. [国产手机为什么一定要进军印度](https://so.toutiao.com/search?keyword=国产手机为什么一定要进军印度)
+1. [大疆行业激光雷达负载禅思L2发布](https://so.toutiao.com/search?keyword=大疆行业激光雷达负载禅思L2发布)
+1. [失联潜水员韩颋在水下百余米处被找到](https://so.toutiao.com/search?keyword=失联潜水员韩颋在水下百余米处被找到)
+1. [国企一领导主动投案自曝担惊受怕](https://so.toutiao.com/search?keyword=国企一领导主动投案自曝担惊受怕)
+1. [男子遇害留下线索24年后嫌疑人落网](https://so.toutiao.com/search?keyword=男子遇害留下线索24年后嫌疑人落网)
+1. [36岁患尿毒症男子跳水库轻生](https://so.toutiao.com/search?keyword=36岁患尿毒症男子跳水库轻生)
+1. [日本专家：中东风险或让原油再涨价](https://so.toutiao.com/search?keyword=日本专家：中东风险或让原油再涨价)
+1. [2023乒乓球全锦赛女单四强诞生](https://so.toutiao.com/search?keyword=2023乒乓球全锦赛女单四强诞生)
+1. [司机绕路带女乘客至陌生地段被约谈](https://so.toutiao.com/search?keyword=司机绕路带女乘客至陌生地段被约谈)
+1. [安理会将就巴以冲突举行会议](https://so.toutiao.com/search?keyword=安理会将就巴以冲突举行会议)
+1. [亚残运会火种在广州完成采集](https://so.toutiao.com/search?keyword=亚残运会火种在广州完成采集)
+1. [专家谈中华文明不止一万年](https://so.toutiao.com/search?keyword=专家谈中华文明不止一万年)
+1. [漫评：巴以冲突再起 战争笼罩中东](https://so.toutiao.com/search?keyword=漫评：巴以冲突再起+战争笼罩中东)
+1. [杭州转入亚残运会时间：公交升级](https://so.toutiao.com/search?keyword=杭州转入亚残运会时间：公交升级)
+1. [医生：儿童肺炎支原体感染迎小高峰](https://so.toutiao.com/search?keyword=医生：儿童肺炎支原体感染迎小高峰)
+1. [专家谈第二艘美国航母或将部署中东](https://so.toutiao.com/search?keyword=专家谈第二艘美国航母或将部署中东)
+1. [亓延军已任公安部常务副部长](https://so.toutiao.com/search?keyword=亓延军已任公安部常务副部长)
+1. [多地肺炎支原体儿童感染者人数增多](https://so.toutiao.com/search?keyword=多地肺炎支原体儿童感染者人数增多)
+1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
+1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
+1. [去年我国出生人口956万 二孩占近4成](https://so.toutiao.com/search?keyword=去年我国出生人口956万+二孩占近4成)
+1. [平遥电影节开幕式红毯](https://so.toutiao.com/search?keyword=平遥电影节开幕式红毯)
+1. [宝马车高速变道后紧急刹车降速至40](https://so.toutiao.com/search?keyword=宝马车高速变道后紧急刹车降速至40)
+1. [A股三大指数全线飘红沪指涨0.94%](https://so.toutiao.com/search?keyword=A股三大指数全线飘红沪指涨0.94%)
+1. [3名中国公民在巴以冲突中遇难](https://so.toutiao.com/search?keyword=3名中国公民在巴以冲突中遇难)
+1. [为科学插上跨越山水的翅膀](https://so.toutiao.com/search?keyword=为科学插上跨越山水的翅膀)
+1. [学校辟谣"霸凌女生亮相学校宣传片"](https://so.toutiao.com/search?keyword=学校辟谣"霸凌女生亮相学校宣传片")
+1. [普京谈巴以冲突：不要卷入妇女儿童](https://so.toutiao.com/search?keyword=普京谈巴以冲突：不要卷入妇女儿童)
+1. [直击巴以冲突现场：爆炸声不断](https://so.toutiao.com/search?keyword=直击巴以冲突现场：爆炸声不断)
 1. [武大调查女生举报图书馆遭性骚扰](https://so.toutiao.com/search?keyword=武大调查女生举报图书馆遭性骚扰)
 1. [为什么年轻人也开始被肺癌盯上](https://so.toutiao.com/search?keyword=为什么年轻人也开始被肺癌盯上)
 1. [苏炳添到访香港讲述冠军故事](https://so.toutiao.com/search?keyword=苏炳添到访香港讲述冠军故事)
-1. [亓延军已任公安部常务副部长](https://so.toutiao.com/search?keyword=亓延军已任公安部常务副部长)
 1. [加沙避难所已收容约22万巴勒斯坦人](https://so.toutiao.com/search?keyword=加沙避难所已收容约22万巴勒斯坦人)
-1. [国企一领导主动投案自曝担惊受怕](https://so.toutiao.com/search?keyword=国企一领导主动投案自曝担惊受怕)
-1. [农民断缴380元新农合？专家：别涨了](https://so.toutiao.com/search?keyword=农民断缴380元新农合？专家：别涨了)
-1. [外媒：外国雇佣兵正离乌赴以作战](https://so.toutiao.com/search?keyword=外媒：外国雇佣兵正离乌赴以作战)
-1. [周杰伦演唱会前黄牛集体退票](https://so.toutiao.com/search?keyword=周杰伦演唱会前黄牛集体退票)
-1. [女技师称遭灌酒性侵 警方不予立案](https://so.toutiao.com/search?keyword=女技师称遭灌酒性侵+警方不予立案)
-1. [多地肺炎支原体儿童感染者人数增多](https://so.toutiao.com/search?keyword=多地肺炎支原体儿童感染者人数增多)
-1. [36岁患尿毒症男子跳水库轻生](https://so.toutiao.com/search?keyword=36岁患尿毒症男子跳水库轻生)
 1. [曝华为将发类似荣耀Magic5 Pro新机](https://so.toutiao.com/search?keyword=曝华为将发类似荣耀Magic5+Pro新机)
-1. [“佛山电翰”因太多人关注而停播](https://so.toutiao.com/search?keyword=“佛山电翰”因太多人关注而停播)
 1. [碧桂园前9月权益销售额近1550亿元](https://so.toutiao.com/search?keyword=碧桂园前9月权益销售额近1550亿元)
 1. [吴京片场喊谭松韵闺女](https://so.toutiao.com/search?keyword=吴京片场喊谭松韵闺女)
-1. [专家谈中华文明不止一万年](https://so.toutiao.com/search?keyword=专家谈中华文明不止一万年)
-1. [山东5市1区划入青岛圈](https://so.toutiao.com/search?keyword=山东5市1区划入青岛圈)
 1. [盘点转型为带货主播的名人们](https://so.toutiao.com/search?keyword=盘点转型为带货主播的名人们)
 1. [欧菲光回应为华为手机提供镜头模组](https://so.toutiao.com/search?keyword=欧菲光回应为华为手机提供镜头模组)
 1. [国台办：民进党空谈和平骗不了世人](https://so.toutiao.com/search?keyword=国台办：民进党空谈和平骗不了世人)
-1. [学校为减负要求学生不带书包回家](https://so.toutiao.com/search?keyword=学校为减负要求学生不带书包回家)
 1. [产妇拍下产床抓痕引20万妈妈共鸣](https://so.toutiao.com/search?keyword=产妇拍下产床抓痕引20万妈妈共鸣)
 1. [如何预防支原体肺炎](https://so.toutiao.com/search?keyword=如何预防支原体肺炎)
 1. [省委原书记落马1个多月3人同日被查](https://so.toutiao.com/search?keyword=省委原书记落马1个多月3人同日被查)
@@ -66,14 +88,12 @@
 1. [警方公开通缉2名电诈集团头目](https://so.toutiao.com/search?keyword=警方公开通缉2名电诈集团头目)
 1. [在建隧道发生疑似瓦斯爆炸 5人遇难](https://so.toutiao.com/search?keyword=在建隧道发生疑似瓦斯爆炸+5人遇难)
 1. [赵少康集结“战斗蓝”提8项政见](https://so.toutiao.com/search?keyword=赵少康集结“战斗蓝”提8项政见)
-1. [外媒：华为发布手机的方式值得赞扬](https://so.toutiao.com/search?keyword=外媒：华为发布手机的方式值得赞扬)
 1. [谭松韵新片演闫妮吴京女儿](https://so.toutiao.com/search?keyword=谭松韵新片演闫妮吴京女儿)
 1. [孙卓被拐案明日宣判 父母发声](https://so.toutiao.com/search?keyword=孙卓被拐案明日宣判+父母发声)
 1. [南方电网半年56人主动投案](https://so.toutiao.com/search?keyword=南方电网半年56人主动投案)
 1. [亚运冠军何杰荣归故里受欢迎](https://so.toutiao.com/search?keyword=亚运冠军何杰荣归故里受欢迎)
 1. [退休教授曾因吸烟致讲座场所被罚款](https://so.toutiao.com/search?keyword=退休教授曾因吸烟致讲座场所被罚款)
 1. [一汽丰田直播间被多少钱能买车刷屏](https://so.toutiao.com/search?keyword=一汽丰田直播间被多少钱能买车刷屏)
-1. [租客怀孕5个月房东要求退租](https://so.toutiao.com/search?keyword=租客怀孕5个月房东要求退租)
 1. [巴以冲突双方超2300人死亡](https://so.toutiao.com/search?keyword=巴以冲突双方超2300人死亡)
 1. [普京：俄罗斯始终支持巴勒斯坦建国](https://so.toutiao.com/search?keyword=普京：俄罗斯始终支持巴勒斯坦建国)
 1. [林高远因伤退赛无缘全锦赛男单四强](https://so.toutiao.com/search?keyword=林高远因伤退赛无缘全锦赛男单四强)
